# bf02-material-data-tool

./: README.md  combined_output_sheet.xlsx  combined_output_sheety.xlsx  matched_output_all_sheetss.xlsx  pyproject.toml
logs/: app.log.1  app.log.2  app.log.3
src/: app.py
src/config/: loader.py  setting.yaml
src/data/: downloader.py  transformer.py  writer.py
src/models/: data_model.py
src/utils/: helper_functions_downloader.py  helper_functions_transformer.py  logger.py
src/workflows/: pipeline.py
src/workflows/deployments/: data_pipeline_deployment.yaml
tests/: test_transformer.py
